--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/strapi": "4.11.5",
     "pg": "8.6.0",
     "strapi-plugin-populate-deep": "^1.1.2",
-    "strapi-provider-upload-ftp-v2": "^1.1.2"
+    "strapi-provider-upload-ftp-v2": "^1.1.2",
+    "strapi4-ftp-provider": "^1.0.5"
   },
   "author": {
     "name": "A Strapi developer"
