--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cms-be",
+  "name": "cms-api",
   "private": true,
-  "version": "0.1.0",
-  "description": "A Strapi application",
+  "version": "1.0.0",
+  "description": "ark@DEV CMS API",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
@@ -10,13 +10,13 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.11.5",
-    "@strapi/plugin-users-permissions": "4.11.5",
-    "@strapi/strapi": "4.11.5",
-    "pg": "8.6.0"
+    "@strapi/plugin-i18n": "4.11.2",
+    "@strapi/plugin-users-permissions": "4.11.2",
+    "@strapi/strapi": "4.11.2",
+    "pg": "8.11.0"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "ark@DEV"
   },
   "strapi": {
     "uuid": "6cd59852-4ff1-4b43-ac90-41b8de5b71a5"
