--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@strapi/plugin-i18n": "4.11.5",
     "@strapi/plugin-users-permissions": "4.11.5",
     "@strapi/strapi": "4.11.5",
-    "pg": "8.11.0"
+    "pg": "8.11.0",
+    "strapi-plugin-populate-deep": "^2.0.0"
   },
   "author": {
     "name": "ark@DEV"
